--- a/springboot-producer/pom.xml
+++ b/springboot-producer/pom.xml
@@ -48,6 +48,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.17.0</version> <!-- match your Jackson version -->
+		</dependency>
+
+
 		<!-- Spring Kafka -->
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
