--- a/BaseStationConfig/pom.xml
+++ b/BaseStationConfig/pom.xml
@@ -57,12 +57,14 @@
         </dependency>
 
         <!-- Testing -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <version>3.2.4</version> <!-- Match your Spring Boot version -->
+        <scope>test</scope>
+    </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
