network nearly fixed, just consumer to go?

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,9 @@ services:
 
 networks:
   tap_network:
-    driver: bridge
     name: tap_network
-    external: true
+    driver: bridge
+    attachable: true
 
 volumes:
   kafka-data:
