--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -27,7 +27,12 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+    </dependency>
+     <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
